crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_override_help_modal.snap
---
source: crates/app/src/tui/mod.rs
expression: screen
---
  1:Atlas     ╔ Keys ════════════════════════════════════════════════════════════════╗
              ║Armor panel (Tab to focus)                                            ║─────────────┐
              ║  Spc/Ent  damage region (armor then structure)                       ║t            │
              ║  u        repair region                                              ║             │
              ║  f        toggle front / rear armor                                  ║             │
              ║  c        critical hits (region table)                               ║             │
              ║Weapons panel (Tab to focus)                                          ║             │
              ║  Spc/Ent  fire TIC (banks its heat)                                  ║             │
              ║  u        un-fire TIC (refund heat)                                  ║             │
┌LA 10,11──┐  ║General                                                               ║             │
│A 7/7     │  ║  Tab      switch panel (armor / weapons)                             ║             │
│██████████│  ║  ↑↓←→     move selection in panel (hjkl too)                         ║             │
│S 3/3     │  ║  o / i    heat up / down (0–5 ladder)                                ║             │
│██████████│  ║  v        movement this turn (mode + hexes)                          ║             │
│          │  ║  t        to-hit shot (target movement / state)                      ║             │
│          │  ║  e        end turn (dissipate heat, clear fired)                     ║             │
│          │  ║  x        toggle shutdown / restart                                  ║             │
│          │  ║  p / P    pilot / crew hit / heal                                    ║             │
│          │  ║  g        edit gunnery / piloting skills                             ║+  KIA       │
│          │  ║  L        log snapshot (game log)                                    ║             │
└──────────┘  ║  z        undo                                                       ║─────────────┘
            ┌L║  , / .    previous / next unit  ([ / ] also)                         ║─────────────┐
            │A║  a / D    add / delete unit                                          ║             │
            │█║  S        sessions browser                                           ║             │
            │S║  ^t       display picker (theme · layout · icons)                    ║             │
            │█║  q        quit                                                       ║             │
            │ ║  Override included with permission from Death From Above Wargaming.  ║             │
            │ ║  Learn more about Override & DFA at https://dfawargaming.com         ║             │
            └─║  press any key to close                                              ║─────────────┘
 Spc:dmg/fire ╚══════════════════════════════════════════════════════════════════════╝end  p:pilot
