crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_override_to_hit.snap
---
source: crates/app/src/tui/mod.rs
assertion_line: 1108
expression: render(&mut app)
---
  1:Atlas
                        ┌HD 12─────┐                        ┌ Atlas AS7-D ─────────────────────────┐
                        │A 4/4     │                        │Type BattleMech  Mass 100t            │
                        │██████████│                        │Move 3 / 5     TMM 1 / 2              │
                        │S 3/3     │                        │Heat 0/5  Sinks 4                     │
                        │██████████│                        │Moved standstill (-1 hit)             │
                        │          │                        │                                      │
                        │          │                        │  Weapons        Dmg  Ht              │
                        └──────────┘                        │▶ AC/20          7    1               │
┌LA 10,11──┐            ╔CT ▸F═════╗            ┌RA 3,4────┐│  MLas           2    1               │
│A 7/7     │        ╔ To-hit shot ═════════════════════════════════════════════╗                   │
│██████████│        ║▶ Target TMM             2                                ║                   │
│S 3/3     │        ║  Target jumped (+1)     [ ]                              ║L   X              │
│██████████│        ║  Target immobile (-2)   [ ]                              ║--  --             │
│          │        ║  Secondary target (+1)  [ ]                              ║—   —              │
│          │        ║  Rear arc (+1)          [ ]                              ║                   │
│          │        ║                                                          ║                   │
│          │        ║AC/20:  PB 5+  S 5+  M 7+  L —  X —                       ║                   │
│          │        ║  attacker move: set with [v]   [Esc] close               ║                   │
│          │        ╚══════════════════════════════════════════════════════════╝9+  11+  KIA       │
└──────────┘            ╚══════════╝            └──────────┘└──────────────────────────────────────┘
            ┌LL 9──────┐            ┌RL 5──────┐            ┌ Heat ────────────────────────────────┐
            │A 7/7     │            │A 7/7     │            │ 5  Automatic Shutdown                │
            │██████████│            │██████████│            │ 4  Ammo Explosion (8+)               │
            │S 3/3     │            │S 3/3     │            │ 3  Shutdown (avoid 8+)               │
            │██████████│            │██████████│            │ 2  +1 Ranged Attack                  │
            │          │            │          │            │ 1  -2 Move / -1 TMM                  │
            │          │            │          │            │[0] No Effects                        │
            └──────────┘            └──────────┘            └──────────────────────────────────────┘
 Spc:dmg/fire  u:rep/unfire  o/i:heat  c:crit  v:move  t:to-hit  f:face  Tab:panel  e:end  p:pilot
